fix auth and added route checker middleware
