# apps/backend/auth-service/src/controllers/types/auth.types.ts
@@ -1,0 +1,14 @@
+export interface SignUpRequest {
+  username?: string;
+  email: string;
+  password: string;
+}
+
+export interface VerifyUserRequest {
+  username: string;
+  code: string;
+}
+export interface SignInRequest {
+  username: string;
+  password: string;
+}
